Fix spacing styling between homepage signup button and welcome text Initially the text and button were close to one another and the signup btn did not go to the signup page. In order to fix this issue the button was changed to a Link tag and had to be placed inside of a div in order to provide space between the welcome text and the button.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,21 +56,16 @@ input {
 
 .home-signup-btn {
   border-radius: 20px;
+  text-decoration: none;
+  color: black ;
   background-color: var(--homepage-color);
   font-family: inherit;
   font-size: 14px;
-  font-weight: bold;
-  width: 18vw;
   padding: 10px;
 }
 
-.home-signup-btn {
-  margin-top: 3em;
-  font-weight: normal;
-}
-
-.homepage-account-text {
-  margin-top: -2em;
+.home-signup-btn-container {
+  margin-top: 4em;
 }
 
 .home-login-link {
